[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/environment/arcade/arcade_view.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/ArcadeControl.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/arcade/arcade_screen.png" type="Texture" id=4]
[ext_resource path="res://assets/environment/arcade/arcade_joystick.png" type="Texture" id=5]
[ext_resource path="res://assets/environment/arcade/arcade_buttons.png" type="Texture" id=6]

[node name="ArcadeControl" type="Node2D"]
script = ExtResource( 2 )

[node name="ArcadeSprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )
offset = Vector2( 512, 300 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )

[node name="ArcadeScreen" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 512, 264 )

[node name="ArcadeControls" type="Node2D" parent="."]

[node name="Joystick" type="Sprite" parent="ArcadeControls"]
position = Vector2( 400, 490 )
scale = Vector2( 5, 5 )
z_index = 3
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 32, 32, 32, 32 )

[node name="Button1" type="Sprite" parent="ArcadeControls"]
position = Vector2( 588, 484 )
scale = Vector2( 5, 5 )
z_index = 3
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="Button2" type="Sprite" parent="ArcadeControls"]
position = Vector2( 620, 460 )
scale = Vector2( 5, 5 )
z_index = 3
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 16, 0, 8, 8 )

[node name="Button3" type="Sprite" parent="ArcadeControls"]
position = Vector2( 620, 508 )
scale = Vector2( 5, 5 )
z_index = 3
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 32, 0, 8, 8 )

[node name="Button4" type="Sprite" parent="ArcadeControls"]
position = Vector2( 652, 484 )
scale = Vector2( 5, 5 )
z_index = 3
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 48, 0, 8, 8 )
